# ev-backend

./: Dockerfile  pyproject.toml
.github/workflows/: main.yaml
src/: main.py
src/config/: database.py  fastapi.py
src/db/: __init__.py  database.py
src/models/: charger.py  user.py
src/ocpp/: charge_point.py
src/routers/: health.py  ocpp.py
src/utils/: authenticate_websocket.py  singleton.py  websocket_interface.py
