[project]
name = "ev-backend"
version = "0.1.0"
description = "Backend for EV charging management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.124.2",
    "ocpp>=2.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
